--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,9 @@ address{
 .navbar-dark {
     background-color: #512DA8;
 }
+
+.submitComment {
+    background-color: transparent;
+    color: #6c757d;
+    border: 1px solid #6c757d;
+}
